# wait-local-agent

./: .env.example  .gitignore  .gitleaksignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  connector_request.yml  security_report.yml  template_request.yml
.github/workflows/: release-desktop.yml  test.yml
ai/tasks/adaptation-conn-azure/: implementation.md  review.md
demo/: README.md
demo/sample_runbooks/: p1-alert-runbook.md  shared-mailbox-runbook.md  vpn-troubleshooting.md
demo/sample_tickets/: tickets.json
desktop/: README.md  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
docs/: appliance-install.md  architecture.md  build-plan.md  commercial-model.md  competitive-analysis.md  connector-setup.md  desktop-install.md  ecosystem-integration.md  launch-checklist.md  local-demo.md  open-core-boundary.md  pack-loader.md  product-architecture.md  publication-checklist.md  roadmap.md  security-model.md  status.md  update-channel.md
docs/reports/: local-agent-commercial-build-report.md
examples/sample_docs/: mfa-reset.md  printer-triage.txt  shared-mailbox.md
examples/sample_tickets/: tickets.json
packaging/: README.md  build-sidecar.sh  server.spec
scripts/: __init__.py  backup_state.sh  demo_appliance.sh  install.sh  public_surface_audit.py  restore_state.sh  validate_release.sh
src/wait_local_agent/: backup.py  cli.py  collectors.py  config.py  connectors.py  document_parsing.py  halopsa.py  hudu.py  knowledge.py  models.py  providers.py  rbac.py  retrieval.py  scheduler.py  security.py  services.py  store.py  update_channel.py  vault.py  vector_search.py  workflows.py
src/wait_local_agent/api/: app.py  founder.py  server_entry.py
src/wait_local_agent/cloud_connectors/: __init__.py  aws.py  azure.py  gcp.py  m365.py
src/wait_local_agent/reports/: __init__.py  builders.py  models.py  (+3 more)
tests/: conftest.py  test_api.py  test_api_import.py  test_audit_export.py  test_aws_connector.py  test_azure_connector.py  test_backup.py  test_cli.py  test_collectors.py  test_config.py  test_connectors.py  test_connectors_validate.py  test_database_inventory_collector.py  test_endpoint_agents_collector.py  test_firewall_rules_collector.py  test_founder_surface.py  test_gcp_connector.py  test_halopsa.py  test_hudu.py  test_knowledge.py  test_launch_edge_coverage.py  test_listening_ports_collector.py  test_m365_connector.py  test_network_interfaces_collector.py  test_ops_routes.py  test_pack_loader.py  test_packs_cli.py  test_process_inventory_collector.py  test_providers.py  test_public_surface_audit.py  test_rate_limit.py  test_rbac.py  test_reports.py  test_routing_table_collector.py  test_scheduler.py  test_security_vault.py  test_server_entry.py  test_store.py  test_ticket_intelligence.py  test_update_channel.py  (+3 more)
ui/: .env.desktop  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: App.tsx  routes.tsx  styles.css
ui/tests/: App.test.tsx  wla04-surfaces.test.tsx
(+28 files in other folders)
