[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "wait-local-agent"
version = "0.1.0"
description = "Local-first AI copilot runtime for MSPs and SMBs."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "WAIT" }]
dependencies = [
  "cryptography>=48.0.1,<49",
  "fastapi>=0.139.0,<1.0",
  "httpx>=0.27,<1.0",
  "pypdf>=6.13.3,<7.0",
  "slowapi>=0.1.10,<0.2",
  "typer>=0.12,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
docling = [
  "docling>=2,<3",
]
qdrant = [
  "fastembed>=0.4,<1",
  "qdrant-client>=1.12,<2",
]
knowledge = [
  "docling>=2,<3",
  "fastembed>=0.4,<1",
  "qdrant-client>=1.12,<2",
]
dev = [
  "bandit>=1.7,<2.0",
  "mypy>=1.13,<2.0",
  "pip-audit>=2.7,<3.0",
  "pytest>=9.0.3,<10.0",
  "pytest-cov>=5.0,<6.0",
  "reportlab>=4.2,<5.0",
  "ruff>=0.6,<1.0",
]

[project.scripts]
wait-local-agent = "wait_local_agent.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/wait_local_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["wait_local_agent"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 95

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.uv]
constraint-dependencies = [
  "idna>=3.15",
  "msgpack>=1.2.1",
  "starlette>=1.3.1",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
files = ["src", "tests"]
check_untyped_defs = true
disable_error_code = ["no-untyped-def"]
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["docling.*", "fastembed.*", "qdrant_client.*", "reportlab.*"]
ignore_missing_imports = true
