[package]
name = "wait-local-agent-desktop"
version = "1.1.1"
description = "WAIT Local Agent desktop application"
authors = ["WAIT"]
edition = "2021"
rust-version = "1.85.0"
license = "Apache-2.0"
publish = false

[build-dependencies]
tauri-build = { version = "2.6.2" }

[dependencies]
getrandom = "0.4.3"
serde_json = "1"
tauri = { version = "2.11.5" }
tauri-plugin-dialog = "2.7.2"
tauri-plugin-shell = "2.3.5"
tauri-plugin-updater = "2.10.1"
